--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.0.6",
     "react": "16.9.0",
-    "react-dom": "16.9.0"
+    "react-dom": "16.9.0",
+    "react-lazy-load-image-component": "^1.3.2"
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
