--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
       "react-app"
     ],
     "rules": {
-      "jsx-a11y/anchor-is-valid": "off"
+      "jsx-a11y/anchor-is-valid": "off",
+      "spaced-comment": "off"
     }
   }
 }
