--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node ./server",
     "test": "react-scripts test",
     "predeploy": "yarn build && next export && touch ./out/.nojekyll",
     "deploy": "gh-pages -d out -t true"
@@ -18,6 +18,7 @@
     "@zeit/next-css": "^1.0.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.0.6",
+    "next-offline": "^4.0.6",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-lazy-load-image-component": "^1.3.2"
